--- a/src/app/shared/layouts/MainLayout/MainLayout.component.html
+++ b/src/app/shared/layouts/MainLayout/MainLayout.component.html
@@ -1,2 +1,6 @@
-<app-top-header />
-<router-outlet />
+<div class="antialiased bg-gray-50 dark:bg-gray-900">
+  <app-top-header />
+  <main class="p-4 h-screen pt-20">
+    <router-outlet />
+  </main>
+</div>
