initilized search functionality

--- a/src/app/shared/components/SearchBar/SearchBar.component.html
+++ b/src/app/shared/components/SearchBar/SearchBar.component.html
@@ -1,1 +1,64 @@
-<p>SearchBar works!</p>,
+<form class="hidden md:block md:pl-2">
+  <label for="topbar-search" class="sr-only">Search</label>
+  <div class="relative md:w-96">
+    <div
+      class="absolute inset-y-0 left-0 flex items-center pl-3 pointer-events-none"
+    >
+      <svg
+        class="w-5 h-5 text-gray-500 dark:text-gray-400"
+        fill="currentColor"
+        viewBox="0 0 20 20"
+        xmlns="http://www.w3.org/2000/svg"
+      >
+        <path
+          fill-rule="evenodd"
+          clip-rule="evenodd"
+          d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z"
+        ></path>
+      </svg>
+    </div>
+    <input
+      data-dropdown-toggle="dropdown"
+      type="text"
+      name="userSearch"
+      id="topbar-search"
+      class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-500 focus:border-primary-500 block w-full pl-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-primary-500 dark:focus:border-primary-500"
+      placeholder="Search users by id..."
+    />
+  </div>
+</form>
+
+<!-- Dropdown menu -->
+<div
+  id="dropdown"
+  class="z-10 hidden bg-white divide-y divide-gray-100 rounded-lg shadow w-96 dark:bg-gray-700"
+>
+  <ul
+    class="p-2 text-sm text-gray-700 dark:text-gray-200"
+    aria-labelledby="dropdownHoverButton"
+  >
+    @for (res of searchResults; track $index) {
+    <li>
+      <a
+        [routerLink]="['/users/details/' + res.id]"
+        class="flex px-4 py-2 m-2 rounded hover:bg-gray-100 dark:hover:bg-gray-600 dark:hover:text-white"
+      >
+        <div
+          class="flex justify-between w-full rounded-xl hover:bg-gray-100 dark:hover:bg-gray-600"
+        >
+          <div class="flex">
+            <img
+              class="w-6 h-6 rounded-full me-2"
+              [src]="res.avatar"
+              alt="Jese image"
+            />
+            <h6>{{ res.first_name }} {{ res.last_name }}</h6>
+          </div>
+
+          <h5>id: {{ res.id }}</h5>
+        </div>
+      </a>
+    </li>
+    }
+  </ul>
+</div>
