--- a/src/app/features/UserDetails/UserDetails.component.html
+++ b/src/app/features/UserDetails/UserDetails.component.html
@@ -16,7 +16,7 @@
         {{ user.email }}
       </p>
       <a
-        href="#"
+        [routerLink]="['/users/page/1']"
         class="inline-flex items-center text-white bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:focus:ring-primary-900"
       >
         Go Back
