--- a/src/app/features/UserDetails/UserDetails.component.html
+++ b/src/app/features/UserDetails/UserDetails.component.html
@@ -1,6 +1,6 @@
 <section class="bg-white dark:bg-gray-900">
   <div
-    class="gap-8 items-center py-8 px-4 mx-auto max-w-screen-xl xl:gap-16 md:grid md:grid-cols-2 sm:py-16 lg:px-6"
+    class="items-center max-w-screen-xl gap-8 px-4 py-8 mx-auto xl:gap-16 md:grid md:grid-cols-2 sm:py-16 lg:px-6"
   >
     <img class="w-full p-5" [src]="user.avatar" />
     <div class="mt-4 md:mt-0">
@@ -8,7 +8,7 @@
         User ID: {{ user.id }}
       </h6>
       <h2
-        class="mb-4 text-4xl tracking-tight font-extrabold text-gray-900 dark:text-white"
+        class="mb-4 text-4xl font-extrabold tracking-tight text-gray-900 dark:text-white"
       >
         {{ user.first_name }}
       </h2>
@@ -16,12 +16,12 @@
         {{ user.email }}
       </p>
       <a
-        [routerLink]="['/users/page/1']"
+        [routerLink]="['/users']"
         class="inline-flex items-center text-white bg-primary-700 hover:bg-primary-800 focus:ring-4 focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:focus:ring-primary-900"
       >
         Go Back
         <svg
-          class="ml-2 -mr-1 w-5 h-5"
+          class="w-5 h-5 ml-2 -mr-1"
           fill="currentColor"
           viewBox="0 0 20 20"
           xmlns="http://www.w3.org/2000/svg"
